force-app/main/default/objects/Feature_Request__c/Feature_Request__c.object-meta.xml
<CustomObject>
    <description>Used to track feature request documents.</description>
    <label>Feature Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>FR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>