force-app/main/default/objects/Feature_Request__c/fields/CDA_CR_Estimate_Days__c.field-meta.xml
<CustomField>
    <fullName>CDA_CR_Estimate_Days__c</fullName>
    <description>Total estimated days for CDA/CR</description>
    <label>CDA/CR Estimate (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>