force-app/main/default/objects/Feature_Request__c/fields/Date_Accepted_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Accepted_Status__c</fullName>
    <description>The date the status was changed to Accepted.</description>
    <label>Date Accepted Status</label>
    <type>Date</type>
</CustomField>