force-app/main/default/objects/Feature_Request__c/fields/Date_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Complete_Status__c</fullName>
    <description>The date the status was changed to Complete.</description>
    <label>Date Complete Status</label>
    <type>Date</type>
</CustomField>