force-app/main/default/objects/Feature_Request__c/fields/Date_Open_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Open_Status__c</fullName>
    <description>The date the status was changed to Open.</description>
    <label>Date Open Status</label>
    <type>Date</type>
</CustomField>