force-app/main/default/objects/Feature_Request__c/fields/Date_Rejected_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_Status__c</fullName>
    <description>The date the status was changed to Rejected.</description>
    <label>Date Rejected Status</label>
    <type>Date</type>
</CustomField>