force-app/main/default/objects/Feature_Request__c/fields/Date_Withdrawn_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrawn_Status__c</fullName>
    <description>The date the status was changed to Withdrawn.</description>
    <label>Date Withdrawn Status</label>
    <type>Date</type>
</CustomField>