force-app/main/default/objects/Feature_Request__c/fields/FR_Type__c.field-meta.xml
<CustomField>
    <fullName>FR_Type__c</fullName>
    <description>The type of feature request.</description>
    <label>FR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>