force-app/main/default/objects/Feature_Request__c/fields/Link_to_Feature_Card_s__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Feature_Card_s__c</fullName>
    <description>The link to the feature card in the product management tool.</description>
    <label>Link to Feature Card(s)</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>