force-app/main/default/objects/Feature_Request__c/fields/Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_by_Date__c</fullName>
    <description>The date the customer needs it by.</description>
    <inlineHelpText>Is there a timeframe within which this feature must be delivered in order for it to be of value?</inlineHelpText>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>