force-app/main/default/objects/Feature_Request__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Feature_Request__c</referenceTo>
    <relationshipLabel>Feature Requests</relationshipLabel>
    <relationshipName>Feature_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>