force-app/main/default/objects/Feature_Request__c/fields/Original_Feature_Request_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Feature_Request_Product_Owner__c</fullName>
    <description>The original Feature Request owner</description>
    <label>Original Feature Request Product Owner</label>
    <type>Email</type>
</CustomField>