force-app/main/default/objects/Feature_Request__c/fields/Original_FR_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_FR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the original Feature Request Owner</description>
    <label>Original FR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>