force-app/main/default/objects/Feature_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>NetNumber&apos;s products that are associated with the feature request.</description>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5G-AUSF</fullName>
                <isActive>false</isActive>
                <label>5G-AUSF</label>
            </value>
            <value>
                <fullName>5G-BSF</fullName>
            </value>
            <value>
                <fullName>5G-NRF</fullName>
            </value>
            <value>
                <fullName>5G-NSSF</fullName>
            </value>
            <value>
                <fullName>5G-SCP</fullName>
            </value>
            <value>
                <fullName>5G-SEPP</fullName>
            </value>
            <value>
                <fullName>5G-UDM</fullName>
                <isActive>false</isActive>
                <label>5G-UDM</label>
            </value>
            <value>
                <fullName>AAA</fullName>
                <isActive>false</isActive>
                <label>AAA</label>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>BGCF</fullName>
                <isActive>false</isActive>
                <label>BGCF</label>
            </value>
            <value>
                <fullName>CBAM-Blueprint</fullName>
                <isActive>false</isActive>
                <label>CBAM-Blueprint</label>
            </value>
            <value>
                <fullName>CLF</fullName>
                <isActive>false</isActive>
                <label>CLF</label>
            </value>
            <value>
                <fullName>Core Platform</fullName>
                <isActive>false</isActive>
                <label>Core Platform</label>
            </value>
            <value>
                <fullName>Core-Platform-NG</fullName>
                <isActive>false</isActive>
                <label>Core-Platform-NG</label>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>CSCF</fullName>
            </value>
            <value>
                <fullName>Custom Data</fullName>
                <isActive>false</isActive>
                <label>Custom Data</label>
            </value>
            <value>
                <fullName>Custom Reporting</fullName>
                <isActive>false</isActive>
                <label>Custom Reporting</label>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>EIR</fullName>
            </value>
            <value>
                <fullName>EIR FE</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>ENUM</fullName>
            </value>
            <value>
                <fullName>ENUM/DNS - combo</fullName>
                <isActive>false</isActive>
                <label>ENUM/DNS - combo</label>
            </value>
            <value>
                <fullName>GDS - Carrier-ID</fullName>
            </value>
            <value>
                <fullName>GDS - CNAM</fullName>
            </value>
            <value>
                <fullName>GDS - Mobile Number Information</fullName>
            </value>
            <value>
                <fullName>GDS - Nuisance Calls Identification</fullName>
            </value>
            <value>
                <fullName>GDS - OSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>