force-app/main/default/objects/Feature_Request__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The owner of the product associated to the feature request.</description>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>