force-app/main/default/objects/Feature_Request__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Used to track the actual or planned release the feature is on or will be in.</description>
    <label>Release</label>
    <length>50</length>
    <type>Text</type>
</CustomField>