force-app/main/default/objects/Feature_Request__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Bullet point list of key functional requirements that have been identified.</description>
    <inlineHelpText>Bullet point list of key functional requirements that have been identified.</inlineHelpText>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>