force-app/main/default/objects/Feature_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the feature request</description>
    <inlineHelpText>See Feature Requests Instructions for descriptions.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Needs More Information</fullName>
            </value>
            <value>
                <fullName>CDA Estimate Complete</fullName>
            </value>
            <value>
                <fullName>Accepted to Product Backlog</fullName>
            </value>
            <value>
                <fullName>Targeted</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>