force-app/main/default/objects/Feature_Request__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Summary of the feature request - high level</description>
    <inlineHelpText>Please provide a short one-line title to serve as a descriptive handle for this request.</inlineHelpText>
    <label>Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>