force-app/main/default/objects/Feature_Request__c/fields/Total_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Value__c</fullName>
    <description>The total value of the amounts of the related opportunities.</description>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>