force-app/main/default/objects/Feature_Request__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <description>The total amount of the opportunities associated with the feature requests.</description>
    <label>Total Weighted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>