force-app/main/default/objects/Feature_Request__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>More detailed information about the feature request.</description>
    <label>Use Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>