force-app/main/default/objects/Feature_Request__c/fields/Withdraw_Request__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the submitter wants to withdraw the request.</description>
    <label>Withdraw Request</label>
    <type>Checkbox</type>
</CustomField>