force-app/main/default/objects/Feature_Request__c/validationRules/Link_to_Feature_Card_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Link_to_Feature_Card_is_Required</fullName>
    <active>true</active>
    <description>Link to feature card(s) is required when the status is accepted.</description>
    <errorConditionFormula>AND( ISPICKVAL(   Status__c  , &quot;Accepted&quot;), ISBLANK(   Link_to_Feature_Card_s__c  ) )</errorConditionFormula>
    <errorDisplayField>Link_to_Feature_Card_s__c</errorDisplayField>
    <errorMessage>Link to Feature Card(s) is Required</errorMessage>
</ValidationRule>