force-app/main/default/objects/Feature_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>